k8_/deployment.yaml
apiVersion: client.authentication.k8s.io/v1beta1

kind: Deployment
metadata:
  name: mlapp_deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlops
  template:
    metadata:
      labels:
        app: mlops
    spec:
      containers:
        - name: mlops
          image: mlops:app-66
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 256Mi
