k8_/app_service_ingress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: namespacemlops
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: namespacemlops
  name: deployment-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mlopsapp
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mlopsapp
    spec:
      containers:
      - image: 579989520040.dkr.ecr.eu-north-1.amazonaws.com/mlops:app-75
        imagePullPolicy: Always
        name: mlopsapp
        resources:
          limits:
            memory: "2Gi"
            cpu: "1"
          requests:
            memory: "2Gi"
            cpu: "500m"
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  namespace: namespacemlops
  name: service-mlops
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: mlopsapp
---



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: namespacemlops
  name: ingress-mlops
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-mlops
              port:
                number: 80
